{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 659,
  "lineage": "d98b58a1-1625-3fd4-7b53-d130917811ac",
  "resources": [
    {
      "module": "module.sg_osaka",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:891377151821:security-group/sg-012f2e4d78f75ead7",
            "description": "Security group for Aurora DB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012f2e4d78f75ead7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ae17db4cf25c14a2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "aurora-sg",
            "name_prefix": "",
            "owner_id": "891377151821",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aurora-sg"
            },
            "tags_all": {
              "Name": "aurora-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f356a277ef46bf2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_osaka",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_sql_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:891377151821:security-group/sg-0ae17db4cf25c14a2",
            "description": "Security group for allowing SQL access to Aurora",
            "egress": [],
            "id": "sg-0ae17db4cf25c14a2",
            "ingress": [],
            "name": "aurora-sql-access-sg",
            "name_prefix": "",
            "owner_id": "891377151821",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aurora-sql-access-sg"
            },
            "tags_all": {
              "Name": "aurora-sql-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f356a277ef46bf2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_osaka",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-246775257",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-012f2e4d78f75ead7",
            "security_group_rule_id": "sgr-03673b2ed833d6b41",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_osaka.aws_security_group.aurora_sg",
            "module.vpc_osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_osaka",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_aurora_sql_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2319334435",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ae17db4cf25c14a2",
            "security_group_rule_id": "sgr-0a5798f8596b54f40",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_osaka.aws_security_group.aurora_sql_instance_sg",
            "module.vpc_osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_osaka",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3815714843",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-012f2e4d78f75ead7",
            "security_group_rule_id": "sgr-0edee773a0c17f1e9",
            "self": false,
            "source_security_group_id": "sg-0ae17db4cf25c14a2",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_osaka.aws_security_group.aurora_sg",
            "module.sg_osaka.aws_security_group.aurora_sql_instance_sg",
            "module.vpc_osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_tokyo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377151821:security-group/sg-06bab67ba467d4778",
            "description": "Security group for Aurora DB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06bab67ba467d4778",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e5ac244853ab531e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "aurora-sg",
            "name_prefix": "",
            "owner_id": "891377151821",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aurora-sg"
            },
            "tags_all": {
              "Name": "aurora-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fd64c13c996db3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_tokyo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_sql_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377151821:security-group/sg-0e5ac244853ab531e",
            "description": "Security group for allowing SQL access to Aurora",
            "egress": [],
            "id": "sg-0e5ac244853ab531e",
            "ingress": [],
            "name": "aurora-sql-access-sg",
            "name_prefix": "",
            "owner_id": "891377151821",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aurora-sql-access-sg"
            },
            "tags_all": {
              "Name": "aurora-sql-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fd64c13c996db3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_tokyo",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-47138204",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06bab67ba467d4778",
            "security_group_rule_id": "sgr-0817039abb24b0e97",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_tokyo.aws_security_group.aurora_sg",
            "module.vpc_tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_tokyo",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_aurora_sql_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3512723478",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e5ac244853ab531e",
            "security_group_rule_id": "sgr-0fa463cf1f3722955",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_tokyo.aws_security_group.aurora_sql_instance_sg",
            "module.vpc_tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_tokyo",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-2092353376",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06bab67ba467d4778",
            "security_group_rule_id": "sgr-0653203594214473b",
            "self": false,
            "source_security_group_id": "sg-0e5ac244853ab531e",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_tokyo.aws_security_group.aurora_sg",
            "module.sg_tokyo.aws_security_group.aurora_sql_instance_sg",
            "module.vpc_tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_osaka",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "index_key": "subnet_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:891377151821:subnet/subnet-0b1dbd63dc15ca22c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1dbd63dc15ca22c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377151821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02f356a277ef46bf2"
          },
          "dependencies": [
            "module.vpc_osaka.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:891377151821:subnet/subnet-00703d68f02db5dbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00703d68f02db5dbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377151821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02f356a277ef46bf2"
          },
          "dependencies": [
            "module.vpc_osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_osaka",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:891377151821:vpc/vpc-02f356a277ef46bf2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd03ced64d431aa4",
            "default_route_table_id": "rtb-0b757151c02cbf24b",
            "default_security_group_id": "sg-0bd6935cf2772db2d",
            "dhcp_options_id": "dopt-089f8565bf5026daf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02f356a277ef46bf2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b757151c02cbf24b",
            "owner_id": "891377151821",
            "tags": {
              "Name": "vpc-osaka"
            },
            "tags_all": {
              "Name": "vpc-osaka"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_tokyo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": "subnet_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377151821:subnet/subnet-01656bcfe4649ecc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01656bcfe4649ecc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377151821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08fd64c13c996db3d"
          },
          "dependencies": [
            "module.vpc_tokyo.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377151821:subnet/subnet-0e9153277823c8ea3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9153277823c8ea3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377151821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08fd64c13c996db3d"
          },
          "dependencies": [
            "module.vpc_tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tokyo",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377151821:vpc/vpc-08fd64c13c996db3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-01cf6863721b24d8c",
            "default_route_table_id": "rtb-0f1c8cb8f7fc275f4",
            "default_security_group_id": "sg-0776f565eb6248027",
            "dhcp_options_id": "dopt-0555f799b9f9778cf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08fd64c13c996db3d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1c8cb8f7fc275f4",
            "owner_id": "891377151821",
            "tags": {
              "Name": "vpc-osaka"
            },
            "tags_all": {
              "Name": "vpc-osaka"
            }
          }
        }
      ]
    }
  ]
}